--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,13 +14,16 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@eslint/js": "^9.38.0",
     "@reduxjs/toolkit": "^2.9.2",
     "@tanstack/react-query": "^5.90.5",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-aria-components": "^1.13.0",
     "react-dom": "19.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "typescript-eslint": "^8.46.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
@@ -44,15 +47,9 @@
     "eslint-config-next": "16.0.0",
     "eslint-plugin-storybook": "^9.1.15",
     "jsdom": "^27.0.1",
-    "msw": "^2.11.6",
     "playwright": "^1.56.1",
     "storybook": "^9.1.15",
     "typescript": "^5",
     "vitest": "^4.0.3"
-  },
-  "msw": {
-    "workerDirectory": [
-      "public"
-    ]
   }
 }
