feat(web): integrate Symfony API in frontend
- Add ReactQueryProvider and (optional) React Query Devtools
- Create API client (src/lib/api.ts) using NEXT_PUBLIC_API_BASE_URL
- Add render-prop providers for VHS:
  - VhsList (GET /api/v1/vhs)
  - VhsById (GET /api/v1/vhs/{id})
  - VhsCreate (POST /api/v1/vhs)
  - VhsUpdate (PATCH /api/v1/vhs/{id})
  - VhsDelete (DELETE /api/v1/vhs/{id})
- Update homepage to consume API via VhsList (remove mock usage there)
- Configure env: NEXT_PUBLIC_API_BASE_URL points to Symfony API
- Basic error handling + refetch action in UI

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,7 @@
     "@storybook/addon-docs": "^9.1.15",
     "@storybook/addon-vitest": "^9.1.15",
     "@storybook/nextjs-vite": "^9.1.15",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
