--- a/apps/api/config/packages/nelmio_cors.yaml
+++ b/apps/api/config/packages/nelmio_cors.yaml
@@ -7,5 +7,9 @@ nelmio_cors:
         expose_headers: ['Link', 'X-Total-Count']
         max_age: 3600
     paths:
-        '^/':
+        '^/api/':
             allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
+            allow_methods: ['GET', 'POST', 'PATCH', 'DELETE', 'OPTIONS']
+            allow_headers: ['Content-Type', 'Authorization']
+            expose_headers: ['Link', 'X-Total-Count']
+            max_age: 3600
