--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-storybook": "^9.1.15",
     "jsdom": "^27.0.1",
     "playwright": "^1.56.1",
+    "prettier": "3.6.2",
     "storybook": "^9.1.15",
     "typescript": "^5",
     "vitest": "^4.0.3"
