--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "@eslint/js": "^9.38.0",
+    "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.9.2",
     "@tanstack/react-query": "^5.90.5",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-aria-components": "^1.13.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.65.0",
     "react-redux": "^9.2.0",
     "typescript-eslint": "^8.46.2",
     "zod": "^4.1.12"
