--- a/apps/api/composer.json
+++ b/apps/api/composer.json
@@ -16,6 +16,7 @@
         "symfony/dotenv": "7.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
+        "symfony/property-access": "7.3.*",
         "symfony/runtime": "7.3.*",
         "symfony/serializer": "7.3.*",
         "symfony/uid": "7.3.*",
