--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.9.2",
     "@tanstack/react-query": "^5.90.5",
+    "axios": "^1.13.1",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-aria-components": "^1.13.0",
