--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.9.2",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.13.1",
+    "date-fns": "^4.1.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-aria-components": "^1.13.0",
