--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.13.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-aria-components": "^1.13.0",
