--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,7 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "pnpm panda:watch & next dev",
     "build": "panda && next build",
@@ -18,6 +19,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.9.2",
     "@tanstack/react-query": "^5.90.5",
+    "@vitejs/plugin-react": "^5.1.0",
     "axios": "^1.13.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
@@ -52,7 +54,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "eslint-plugin-storybook": "^9.1.15",
-    "jsdom": "^27.0.1",
+    "jsdom": "^22.1.0",
     "playwright": "^1.56.1",
     "prettier": "3.6.2",
     "storybook": "^9.1.15",
